[package]
name = "nompdf"
version = "0.0.1"
edition = "2021"
authors = ["Edgar <git@edgarluque.com>"]
description = "A PDF parser written in Rust using nom."
repository = "https://github.com/edg-l/nompdf/"
license = "MIT OR Apache-2.0"
keywords = ["pdf", "nom", "parser"]
categories = ["parser-implementations"]
documentation = "https://docs.rs/nompdf"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.1"
thiserror = "1.0.31"

[dev-dependencies]
matches = "0.1.9"
pretty_assertions = "1.2.1"
